--- a/style.css
+++ b/style.css
@@ -1,6 +1,66 @@
 .h1-1 {
   text-align: center;
+  font-family: "Castoro Titling";
 }
 .h2-1 {
   text-align: center;
+  font-family: "Castoro Titling";
+}
+.h2-2 {
+  text-align: center;
+  font-family: "Castoro Titling";
+}
+body {
+  background-image: url(baggrund2.jpg);
+}
+
+/* menu */
+.cta {
+  background-color: rgb(0, 0, 0);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px;
+}
+dl {
+  border-style: groove;
+  border-color: rgb(0, 0, 0);
+  border-width: 3px;
+}
+header {
+  position: sticky;
+  top: 0;
+  padding: 1rem 2rem;
+  box-shadow: 0 12px 28px 0 rgb(0 0 0 / 30%);
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+header .logo a {
+  font-size: 2rem;
+}
+header nav ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 0.4rem;
+  gap: 30px;
+  overflow-x: auto;
+}
+a {
+  text-decoration: none;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+}
+a:hover {
+  color: #666666;
+}
+a.active {
+  color: rgb(0, 0, 0);
 }
